fix bug with mobile version align

--- a/src/styles/blocks/compare-bikes.scss
+++ b/src/styles/blocks/compare-bikes.scss
@@ -5,10 +5,9 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
+  align-items: center;
 
-  @include on-tablet {
-    align-items: center;
-  }
+
 
   @include on-desktop {
     flex-direction: row;
